--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             { code: "MECA", coef: 3, fields: ["CF", "CI", "CC"] },
             { code: "ALG", coef: 3, fields: ["CF", "CI"] },
             { code: "ANA", coef: 5, fields: ["CF", "CI"] },
-            { code: "TEE", coef: 2, fields: ["CF", "CC"] },
+            { code: "TEO", coef: 2, fields: ["CF", "CC"] },
             { code: "ALSDD", coef: 5, fields: ["TPc", "interos", "CC", "TP", "CF"] },
             { code: "ANG", coef: 2, fields: ["CI", "CC", "CF"] },
             { code: "ELECT", coef: 3, fields: ["CF", "CI", "CC"] },
@@ -416,7 +416,7 @@
         MECA: (cf, ci, cc) => 0.5 * cf + 0.25 * ci + 0.25 * cc,
         ALG: (cf, ci) => 0.67 * cf + 0.33 * ci,
         ANA: (cf, ci) => 0.67 * cf + 0.33 * ci,
-        TEE: (cf, cc) => (2/3) * cf + (1/3) * cc,
+        TEO: (cf, cc) => (2/3) * cf + (1/3) * cc,
         ALSDD: (tpc, interos, cc, tp, cf) => (tpc + interos + cc) * 0.25 + tp * 0.2 + cf * 0.55,
         ANG: (ci, cc, cf) => 0.33 * ci + 0.33 * cc + 0.34 * cf,
         ELECT: (cf, ci, cc) => 0.5 * cf + 0.25 * ci + 0.25 * cc,
@@ -591,7 +591,7 @@
              <p><strong>MECA:</strong> 0.5 × CF + 0.25 × CI + 0.25 × CC</p>
              <p><strong>ALG:</strong> 0.67 × CF + 0.33 × CI</p>
              <p><strong>ANA:</strong> 0.67 × CF + 0.33 × CI</p>
-             <p><strong>TEE:</strong> (2/3 × CF) + (1/3 × CC)</p>
+             <p><strong>TEO:</strong> (2/3 × CF) + (1/3 × CC)</p>
              <p><strong>ALSDD:</strong> (TPc + interos + CC) × 0.25 + TP × 0.2 + CF × 0.55</p>
              <p><strong>ANG:</strong> 0.33 × CI + 0.33 × CC + 0.34 × CF</p>
              <p><strong>ELECT:</strong> 0.5 × CF + 0.25 × CI + 0.25 × CC</p>`;
@@ -610,7 +610,7 @@
              <option value="MECA">MECA</option>
              <option value="ALG">ALG</option>
              <option value="ANA">ANA</option>
-             <option value="TEE">TEE</option>
+             <option value="TEO">TEO</option>
              <option value="ALSDD">ALSDD</option>
              <option value="ANG">ANG</option>
              <option value="ELECT">ELECT</option>`;
