--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             { code: "ALG", coef: 3, fields: ["CF", "CI"] },
             { code: "ANA", coef: 5, fields: ["CF", "CI"] },
             { code: "TEO", coef: 2, fields: ["CF", "CC"] },
-            { code: "ALSDD", coef: 5, fields: ["TPc", "interos", "CC", "TP", "CF"] },
+            { code: "ALSDD", coef: 5, fields: ["TPc", "interos", "CC", "TPz", "CF"] },
             { code: "ANG", coef: 2, fields: ["CI", "CC", "CF"] },
             { code: "ELECT", coef: 3, fields: ["CF", "CI", "CC"] },
           ];
@@ -592,7 +592,7 @@
              <p><strong>ALG:</strong> 0.67 × CF + 0.33 × CI</p>
              <p><strong>ANA:</strong> 0.67 × CF + 0.33 × CI</p>
              <p><strong>TEO:</strong> (2/3 × CF) + (1/3 × CC)</p>
-             <p><strong>ALSDD:</strong> (TPc + interos + CC) × 0.25 + TP × 0.2 + CF × 0.55</p>
+             <p><strong>ALSDD:(might change later due to unknown formula </strong> ("(TPc + interos + CC)"/3) × 0.25 + TP × 0.2 + CF × 0.55</p>
              <p><strong>ANG:</strong> 0.33 × CI + 0.33 × CC + 0.34 × CF</p>
              <p><strong>ELECT:</strong> 0.5 × CF + 0.25 × CI + 0.25 × CC</p>`;
           // Hide S1 elements and show S2 elements
