--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             { code: "ALG", coef: 3, fields: ["CF", "CI"] },
             { code: "ANA", coef: 5, fields: ["CF", "CI"] },
             { code: "TEO", coef: 2, fields: ["CF", "CC"] },
-            { code: "ALSDD", coef: 5, fields: ["TPc", "interos", "CC", "TPz", "CF"] },
+            { code: "ALSDD", coef: 5, fields: ["TPc", "interos", "CC", "TP", "CF"] },
             { code: "ANG", coef: 2, fields: ["CI", "CC", "CF"] },
             { code: "ELECT", coef: 3, fields: ["CF", "CI", "CC"] },
           ];
@@ -554,4 +554,4 @@
 
       // S2-specific manual toggle
       function tMM_S2(m) {
-        const cell = document.querySelector(`.s2
+        const cell = document.querySelector(`.s2-
