--- a/index.html
+++ b/index.html
@@ -554,4 +554,104 @@
 
       // S2-specific manual toggle
       function tMM_S2(m) {
-        const cell = document.querySelector(`.s2-
+        const cell = document.querySelector(`.s2-${m}`);
+        const comp = cell.querySelector(".c-g");
+        const man = cell.querySelector(".m-g");
+        const on = document.getElementById(`s2-t-m-${m}`).checked;
+        comp.style.display = on ? "none" : "flex";
+        man.style.display = on ? "block" : "none";
+        cA_S2();
+      }
+
+      // Toggle talents section (unchanged)
+      function tTM() {
+        const on = document.getElementById("t-m").checked;
+        document.getElementById("t-s").style.display = on ? "block" : "none";
+        // Hide S1 table & calc button when talents are active
+        document.getElementById("s1-table").style.display = on ? "none" : "block";
+        document.getElementById("s1-calc").style.display = on ? "none" : "inline-block";
+        const rbs = document.querySelectorAll(".r-b");
+        if (rbs.length === 2) {
+          rbs[0].style.display = on ? "block" : "none";
+          rbs[1].style.display = on ? "none" : "block";
+        }
+      }
+
+      // Toggle S2 mode (and update UI accordingly)
+      function toggleS2() {
+        isS2 = document.getElementById("s2-m").checked;
+        // Update header and formula display
+        const title = document.getElementById("main-title");
+        const formulaDiv = document.getElementById("formula-display");
+        if (isS2) {
+          title.textContent = "1CP S2 Avg Calc";
+          formulaDiv.innerHTML =
+            `<h3>Calc Formulas (S2)</h3>
+             <p><strong>SYS:</strong> 0.5 × FE + 0.3 × ME + 0.2 × CC</p>
+             <p><strong>MECA:</strong> 0.5 × CF + 0.25 × CI + 0.25 × CC</p>
+             <p><strong>ALG:</strong> 0.67 × CF + 0.33 × CI</p>
+             <p><strong>ANA:</strong> 0.67 × CF + 0.33 × CI</p>
+             <p><strong>TEO:</strong> (2/3 × CF) + (1/3 × CC)</p>
+             <p><strong>ALSDD:</strong> (TPc + interos + CC) × 0.25 + TP × 0.2 + CF × 0.55</p>
+             <p><strong>ANG:</strong> 0.33 × CI + 0.33 × CC + 0.34 × CF</p>
+             <p><strong>ELECT:</strong> 0.5 × CF + 0.25 × CI + 0.25 × CC</p>`;
+          // Hide S1 elements and show S2 elements
+          document.getElementById("s1-table").style.display = "none";
+          document.getElementById("s1-calc").style.display = "none";
+          document.getElementById("s1-result").style.display = "none";
+          document.getElementById("s2-table").style.display = "block";
+          document.getElementById("s2-calc").style.display = "inline-block";
+          document.getElementById("s2-result").style.display = "block";
+          // Also adjust missing module dropdown options for S2
+          const select = document.getElementById("m-m");
+          select.innerHTML =
+            `<option value="">-- Choose Module --</option>
+             <option value="SYS">SYS</option>
+             <option value="MECA">MECA</option>
+             <option value="ALG">ALG</option>
+             <option value="ANA">ANA</option>
+             <option value="TEO">TEO</option>
+             <option value="ALSDD">ALSDD</option>
+             <option value="ANG">ANG</option>
+             <option value="ELECT">ELECT</option>`;
+        } else {
+          title.textContent = "1CP S1 Avg Calc";
+          formulaDiv.innerHTML =
+            `<h3>Calc Formulas (S1)</h3>
+             <p><strong>SYS:</strong> (0.1 × TD) + (0.1 × IN×2.5) + (0.3 × CI) + (0.5 × CF)</p>
+             <p><strong>ARCHI:</strong> (0.5 × CF) + (0.5 × CI) + <i>optional 1pt bonus</i></p>
+             <p><strong>ALG/ANA:</strong> (0.67 × CF) + (0.33 × CI)</p>
+             <p><strong>TEE:</strong> (2/3 × CF) + (1/3 × CC)</p>
+             <p><strong>ALSDS:</strong> (0.3 × CF) + (0.2 × CI) + (0.4 × TP avg) + (0.1 × TR)</p>
+             <p><strong>BWEB:</strong> (0.4 × CF) + (0.4 × CI) + (0.2 × CC)</p>
+             <p><strong>ELECT:</strong> (0.5 × CF) + (0.25 × CI) + (0.25 × CC)</p>`;
+          // Show S1 and hide S2
+          document.getElementById("s1-table").style.display = "block";
+          document.getElementById("s1-calc").style.display = "inline-block";
+          document.getElementById("s1-result").style.display = "block";
+          document.getElementById("s2-table").style.display = "none";
+          document.getElementById("s2-calc").style.display = "none";
+          document.getElementById("s2-result").style.display = "none";
+          // Reset missing module dropdown to S1 options
+          const select = document.getElementById("m-m");
+          select.innerHTML =
+            `<option value="">-- Choose Module --</option>
+             <option value="SYS">SYS</option>
+             <option value="ARCHI">ARCHI</option>
+             <option value="ALG">ALG</option>
+             <option value="ANA">ANA</option>
+             <option value="TEE">TEE</option>
+             <option value="ALSDS">ALSDS</option>
+             <option value="BWEB">BWEB</option>
+             <option value="ELECT">ELECT</option>`;
+        }
+        // Also clear any missing modules list (for simplicity)
+        document.getElementById("missing-list").innerHTML = "";
+        missing.length = 0;
+      }
+
+      // Initialize by calculating S1 averages
+      cA();
+    </script>
+  </body>
+</html>
