--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <!-- Table mode S2 toggle -->
       <label style="font-weight: 600; cursor: pointer; display: inline-flex; gap: 0.5rem; align-items: center;">
         <input type="checkbox" id="s2-m" onchange="toggleS2()" style="width: 20px; height: 20px" />
-        Switch to S2 Mode (only works if switch from the table view)
+        Switch to S2 Mode (will only work if switched from the table view)
       </label>
     </div>
 
