--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         --sh: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
       }
 
-
       body {
         font-family: "Segoe UI", system-ui, -apple-system, sans-serif;
         background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
         margin: 0;
-        padding: 2rem;
+        padding: 1rem; 
         line-height: 1.6;
         color: var(--txt);
         min-height: 100vh;
@@ -30,20 +29,19 @@
 
       h2,
       h3 {
-        margin: 0 0 1.5rem;
+        margin: 0 0 1rem; 
         font-weight: 700;
         color: var(--txt);
       }
 
       h2 {
-        font-size: 2.5rem;
+        font-size: 2rem; 
         text-align: center;
         letter-spacing: -0.025em;
         background: linear-gradient(45deg, var(--p), var(--s));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
-
 
       .t-c,
       .i-b,
@@ -53,8 +51,8 @@
         backdrop-filter: blur(10px);
         border-radius: 1rem;
         box-shadow: var(--sh);
-        margin: 1.5rem auto;
-        padding: 2rem;
+        margin: 1rem auto; 
+        padding: 1.5rem; 
         transition: transform 0.2s ease, box-shadow 0.2s ease;
         border: 1px solid rgba(255, 255, 255, 0.3);
         max-width: 100%;
@@ -68,7 +66,6 @@
         box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
       }
 
-
       table {
         width: 100%;
         border-collapse: separate;
@@ -80,7 +77,7 @@
 
       th,
       td {
-        padding: 1rem;
+        padding: 0.75rem; /* reduced from 1rem */
         text-align: center;
         position: relative;
       }
@@ -101,14 +98,13 @@
         border-bottom: 1px solid #e2e8f0;
       }
 
-
       input[type="number"],
       select {
-        width: 90px;
-        padding: 0.75rem 1rem;
+        width: 70px; /* reduced from 90px */
+        padding: 0.5rem 0.75rem; /* slightly reduced */
         border: 2px solid #e2e8f0;
         border-radius: 0.5rem;
-        font-size: 1rem;
+        font-size: 0.9rem; /* reduced font size */
         transition: all 0.2s ease;
         background: white;
         color: var(--txt);
@@ -130,8 +126,8 @@
       .t-m input[type="checkbox"] {
         -webkit-appearance: none;
         appearance: none;
-        width: 44px;
-        height: 24px;
+        width: 34px; /* reduced from 44px */
+        height: 18px; /* reduced from 24px */
         background: #e2e8f0;
         border-radius: 12px;
         position: relative;
@@ -142,8 +138,8 @@
       .t-m input[type="checkbox"]::before {
         content: "";
         position: absolute;
-        width: 20px;
-        height: 20px;
+        width: 14px; 
+        height: 14px; 
         border-radius: 50%;
         background: white;
         top: 2px;
@@ -156,11 +152,11 @@
       }
 
       .t-m input[type="checkbox"]:checked::before {
-        transform: translateX(20px);
+        transform: translateX(16px); 
       }
 
       button {
-        padding: 0.875rem 2rem;
+        padding: 0.75rem 1.5rem; /* reduced from 0.875rem 2rem */
         background: linear-gradient(45deg, var(--p), var(--s));
         color: white;
         border: none;
@@ -172,6 +168,7 @@
         align-items: center;
         gap: 0.5rem;
         box-shadow: var(--sh);
+        font-size: 0.9rem;
       }
 
       button:hover {
@@ -183,18 +180,18 @@
       .r-b {
         background: linear-gradient(45deg, #f8fafc, #ffffff);
         border-radius: 0.75rem;
-        padding: 1.5rem;
-        margin-top: 1.5rem;
+        padding: 1rem; 
+        margin-top: 1rem; 
       }
 
       #f-a,
       #t-f-a,
       #s2-f-a {
-        font-size: 2rem;
+        font-size: 1.5rem; 
         font-weight: 700;
         color: var(--p);
         display: inline-block;
-        padding: 0.5rem 1rem;
+        padding: 0.5rem 0.75rem; 
         border-radius: 0.5rem;
         background: rgba(37, 99, 235, 0.1);
       }
@@ -204,35 +201,34 @@
       }
 
       .i-b p {
-        margin: 1rem 0;
-        padding: 0.75rem;
+        margin: 0.75rem 0;
+        padding: 0.5rem;
         background: #f8fafc;
         border-radius: 0.5rem;
       }
 
       .f {
         text-align: center;
-        margin: 2rem 0;
+        margin: 1rem 0; 
         color: var(--txtl);
-        font-size: 0.875rem;
-        padding-top: 2rem;
+        font-size: 0.75rem; 
+        padding-top: 1rem; 
         border-top: 1px solid #e2e8f0;
       }
 
-
       @media (max-width: 768px) {
         body {
-          padding: 1rem;
+          padding: 0.5rem;
         }
         h2 {
-          font-size: 2rem;
+          font-size: 1.75rem; 
         }
         .t-c,
         .i-b,
         #t-s,
         #s2-c {
-          margin: 1rem auto;
-          padding: 1.5rem;
+          margin: 0.75rem auto;
+          padding: 1rem;
         }
         table {
           display: block;
@@ -240,15 +236,14 @@
         }
         input[type="number"],
         select {
-          width: 80px;
-          padding: 0.5rem;
+          width: 60px; 
+          padding: 0.4rem;
         }
         button {
-          padding: 0.5rem 1.5rem;
-          font-size: 0.9rem;
+          padding: 0.4rem 1.25rem; 
+          font-size: 0.8rem;
         }
       }
-
 
       @keyframes fadeIn {
         from { opacity: 0; transform: translateY(10px); }
@@ -262,21 +257,18 @@
   <body>
 
     <h2 id="main-title">1CP S1 Avg Calc</h2>
-    <div style="text-align: center; margin-bottom: 1.5rem">
-
+    <div style="text-align: center; margin-bottom: 1rem">
       <label style="font-weight: 600; cursor: pointer; display: inline-flex; gap: 0.5rem; align-items: center;">
         <input type="checkbox" id="t-m" onchange="tTM()" style="width: 20px; height: 20px" />
         Enable Talents Avg + Missing Module Calc
       </label>
       &nbsp;&nbsp;&nbsp;
-
       <label style="font-weight: 600; cursor: pointer; display: inline-flex; gap: 0.5rem; align-items: center;">
         <input type="checkbox" id="s2-m" onchange="toggleS2()" style="width: 20px; height: 20px" />
         Switch to S2 Mode (will only work if switched from the table view)
       </label>
     </div>
 
-   
     <div id="t-s" style="display: none">
       <h3>Recover Missing Module from Talents Avg</h3>
       <div style="margin-bottom: 1rem">
@@ -305,14 +297,13 @@
         </div>
         <button onclick="addMissing()">Add Module</button>
       </div>
-      <div id="missing-list" style="margin-bottom: 1.5rem"></div>
+      <div id="missing-list" style="margin-bottom: 1rem"></div>
 
       <button onclick="cM()">Calc Semester Avg</button>
       <div class="r-b">
         <h3>The Semester Avg: <span id="t-f-a">0.00</span></h3>
       </div>
     </div>
-
 
     <div id="s1-table" class="t-c">
       <table>
@@ -372,14 +363,13 @@
       </table>
     </div>
 
-    <div style="text-align: center; margin: 2rem 0">
+    <div style="text-align: center; margin: 1rem 0">
       <button id="s1-calc" onclick="cA()">Calc Semester Avg</button>
     </div>
 
     <div class="r-b" id="s1-result" style="text-align: center">
       <h3>Semester Avg: <span id="f-a">0.00</span></h3>
     </div>
-
 
     <div id="s2-table" class="t-c" style="display: none">
       <table>
@@ -391,7 +381,6 @@
           <th>Avg</th>
         </tr>
         <script>
- 
           const mC2 = [
             { code: "SYS2", coef: 3, fields: ["FE", "ME", "CC"] },
             { code: "MECA", coef: 3, fields: ["CF", "CI", "CC"] },
@@ -438,7 +427,7 @@
       </table>
     </div>
 
-    <div style="text-align: center; margin: 2rem 0">
+    <div style="text-align: center; margin: 1rem 0">
       <button id="s2-calc" onclick="cA_S2()" style="display:none">Calc Semester Avg</button>
     </div>
 
@@ -446,9 +435,7 @@
       <h3>Semester Avg: <span id="s2-f-a">0.00</span></h3>
     </div>
 
-    
     <div class="i-b" id="formula-display">
-
       <h3>Calc Formulas (S1)</h3>
       <p><strong>SYS1:</strong> (0.1 × TD) + (0.1 × IN×2.5) + (0.3 × CI) + (0.5 × CF)</p>
       <p><strong>ARCHI:</strong> (0.5 × CF) + (0.5 × CI) + <i>optional 1pt bonus</i></p>
@@ -457,11 +444,6 @@
       <p><strong>ALSDS:</strong> (0.3 × CF) + (0.2 × CI) + (0.4 × TP avg) + (0.1 × TR)</p>
       <p><strong>BWEB:</strong> (0.4 × CF) + (0.4 × CI) + (0.2 × CC)</p>
       <p><strong>ELECT:</strong> (0.5 × CF) + (0.25 × CI) + (0.25 × CC)</p>
-    </div>
-
-
-    <div style="text-align: center; margin-top: 2rem;">
-      <button onclick="resetCalculator()">Reset All</button>
     </div>
 
     <div class="f">Made by Walid And some AI help (do not judge me)</div>
@@ -502,9 +484,8 @@
         return Array.from(document.querySelectorAll(sel)).map(i => parseFloat(i.value) || 0);
       }
 
-
       function cMA(mod, s, isManual = false, mode = "S1") {
-        if (isManual) return s[0] || 0; 
+        if (isManual) return s[0] || 0;
         if (mode === "S1") {
           const fn = mCal[mod];
           return mod === "ARCHI" ? fn(...s, aB) : fn(...s);
@@ -514,7 +495,6 @@
         }
       }
 
-    
       function cA() {
         let total = 0;
         mC.forEach(m => {
@@ -528,7 +508,6 @@
         });
         document.getElementById("f-a").textContent = (total / tCoef).toFixed(2);
       }
-
 
       function cA_S2() {
         let total = 0;
@@ -770,7 +749,6 @@
           cA();
         }
       }
-
 
       cA();
     </script>
