--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator 1CP S1&S2</title>
-    <style>
+     // S1 modules and fields
+    <style> 
       :root {
         --p: #2563eb;
         --s: #4f46e5;
